# pip-kalki

./: .gitignore  LICENSE  MANIFEST.in  README.md  entry_points  pyproject.toml  setup.py
kalki.egg-info/: PKG-INFO  SOURCES.txt
kalki/kalki.egg-info/: PKG-INFO  entry_points.txt
